ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subnetapp
  namespace: production
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: fsl-challenge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: subnetapp
            port:
              number: 8080
